30_sort_lines/grade.txt
Grading at Mon May 18 17:07:13 UTC 2020
Attempting to compile sortLines.c
sortLines.c: In function ‘main’:
sortLines.c:32:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(*lines[0]='\n')
     ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
